feat: get the installer up to speed